lang/macro/tests/ui/fail/20-invalid-constructor-parameter.stderr
error[E0277]: the trait bound `f32: liquid_lang::You_Should_Use_An_Valid_Input_Type` is not satisfied
  --> $DIR/20-invalid-constructor-parameter.rs:10:20
   |
10 |         pub fn new(&mut self, value: f32) {}
   |                    ^^^^^^^^^^^^^^^^^^^^^ the trait `liquid_lang::You_Should_Use_An_Valid_Input_Type` is not implemented for `f32`
